# llm-think-tag-strip-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
